--- a/how2use_codaimpacts.Rmd
+++ b/how2use_codaimpacts.Rmd
@@ -1969,10 +1969,14 @@ p_values_coef = function(dataset, formula, transformation = "ILR", V=list(matrix
 }
 ```
 
-Delete comments
 
 ```{r}
 p_values_coef_x = function(dataset, formula, transformation = "ILR", V=list(matrix()), R=list(NULL), B=1000, seed=31000){
+  input = check_formula(dataset,formula)
+  Y=input$Y
+  X=input$X
+  Z=input$Z
+  constant = input$constant
   results = list()
   set.seed(seed)
   for (b in 1:B){
@@ -1983,6 +1987,18 @@ p_values_coef_x = function(dataset, formula, transformation = "ILR", V=list(matr
     results[[b]] = coefs_b
   }
   pvals = results[[1]]
+  
+  compare = matrix(0, dim(results[[1]])[1], dim(results[[1]])[2])
+  h=1
+  if (constant){
+    compare[1,] = numeric(dim(compare)[2])
+    h=2
+  }
+  for (elem in X){
+    dimxx = dim(elem)[2]
+    compare[h:(h+dimxx-1),] = matrix(1/dimxx, dim(Y)[2], dimxx)
+  }
+  
   attr(pvals,"space")=NULL
   for (i in 1:(dim(pvals)[1])){
     for (j in 1:(dim(pvals)[2])){
@@ -1990,15 +2006,14 @@ p_values_coef_x = function(dataset, formula, transformation = "ILR", V=list(matr
       for (b in 1:B){
         dist = c(dist, results[[b]][i,j])
       }
-      lowers = sum(dist<0)/B
+      toc = compare[i,j]
+      lowers = sum(dist[!is.na(dist)]<toc)/sum(!is.na(dist))
       pvals[i,j] = 2*min(lowers,1-lowers)
     }
   }
   return(pvals)
 }
 ```
-
-
 
 
 
